crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_for_missing_in.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<ul>@for x items { <li>{x}</li> }</ul>"
---
Markup(
    Child(
        For(
            In(
                1,
                12,
            ),
            1,
            5,
        ),
        1,
        5,
    ),
    1,
    1,
)
