crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_for_pattern.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<ul>@for +x in xs { }</ul>"
---
Markup(
    Child(
        For(
            Pattern(
                Start(
                    1,
                    10,
                ),
                1,
                10,
            ),
            1,
            5,
        ),
        1,
        5,
    ),
    1,
    1,
)
