crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_if_condition.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if ) { <b>x</b> }</p>"
---
Markup(
    Child(
        If(
            Condition(
                Start(
                    1,
                    8,
                ),
                1,
                8,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
