crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_if_else_branch_start.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if x { } @else <b>x</b></p>"
---
Markup(
    Child(
        If(
            ElseBranchStart(
                1,
                20,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
