crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_if_missing_block.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if x }</p>"
---
Markup(
    Child(
        If(
            Body(
                Open(
                    1,
                    10,
                ),
                1,
                10,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
