crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_if_missing_block_before_element.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@if x <b>x</b></p>"
---
Markup(
    Child(
        If(
            Condition(
                OperatorRight(
                    Lt,
                    1,
                    15,
                ),
                1,
                8,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
