crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_match_arrow.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@match x { A -> <b>a</b> }</p>"
---
Markup(
    Child(
        Match(
            Arrow(
                1,
                17,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
