crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_match_bare_text.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@match x { A => hi }</p>"
---
Markup(
    Child(
        Match(
            BareText(
                1,
                20,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
