crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_match_close_tag_body.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@match x { A => </p>"
---
Markup(
    Child(
        Match(
            Body(
                Element(
                    CloseName(
                        1,
                        22,
                    ),
                    1,
                    20,
                ),
                1,
                20,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
