crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_match_close_tag_body_multiline.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<div>\n    @match status {\n        Loading => </pinner />,\n        Ready(n) => <span>{n}</span>,\n    }\n</div>\n"
---
Markup(
    Child(
        Match(
            Body(
                Element(
                    CloseName(
                        3,
                        22,
                    ),
                    3,
                    20,
                ),
                3,
                20,
            ),
            2,
            5,
        ),
        1,
        6,
    ),
    1,
    1,
)
