crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_match_end.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@match x { A => <b>a</b> ) }</p>"
---
Markup(
    Child(
        Match(
            End(
                ExpectedEnd {
                    opening: Position {
                        line: 1,
                        column: 13,
                    },
                    boundary: Position {
                        line: 1,
                        column: 28,
                    },
                    unexpected: Position {
                        line: 1,
                        column: 29,
                    },
                },
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
