crates/alder-parse/src/markup/snapshots/alder_parse__markup__directive__tests__error_match_open.snap
---
source: crates/alder-parse/src/markup/directive.rs
description: "<p>@match x A => <b>a</b> }</p>"
---
Markup(
    Child(
        Match(
            Open(
                1,
                13,
            ),
            1,
            4,
        ),
        1,
        4,
    ),
    1,
    1,
)
